kuber-homeworks/1.5/files/backend-1.5-1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-app
  template:
    metadata:
      labels:
        app: backend-app
    spec:
      containers:
      - name: multitool
        image: praqma/network-multitool
        ports:
          - containerPort: 8080
            name: http-port
          - containerPort: 8443
            name: https-port
